# placeholder

./: .gitignore  README  TODO  make-initramfs.sh  run-qemu.sh
dash-example/: init
eth-tools/: go.mod  go.sum  main.go
linux-kernel/: .config_lap_v0  .config_lap_v1  .config_uefi  .config_uefi_keyboard  NOTE
linux-kernel/etc/grub.d/: 40_custom
minimal-poweroff/: shutdown_syscall.c  shutdown_wrapper.c
signing-examples/try-py-eth-sign/: dbl_asg_mod.py  mul_mod.py  noble.py  rfc6979.py  sign.py
signing-examples/try-py-eth-sign/noble/: noble.js  package.json
signing-examples/try-web3.js/: index.js  package-lock.json  package.json
vigenere/src/: lib.rs  main.rs
wallet-backend-tcp/: go.mod  go.sum  main.go
wallet-frontend/: Cargo.toml  jsonrpc.sh  nginx-config  rust-toolchain.working
wallet-frontend/src/: main.rs  ws.rs
