[package]
name = "paranoid-wallet-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.17.1"
ethers = { version = "2.0.0", features = ["ws"] }
futures-util = "0.3.27" 
url = "2.3.1" 
hex = "0.4.3"
jsonrpc-core = "18.0.0"
log = "0.4.17"
reqwest = { version = "0.11", features = ["json", "tokio-rustls"] }
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full", "sync"] } 
tokio-tungstenite = "0.18.0"
tungstenite = "0.18.0"
